# cblas-inject

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  examples.yml
benches/: blas1_overhead.rs
ctest/: LICENSE  Makefile  cblas.h  common.h
docs/: PORTING_OPENBLAS_CTEST.md  TESTING.md
docs/plans/: 2026-04-30-dual-lp64-ilp64-c-api-implementation.md  2026-04-30-lp64-ilp64-c-api-design.md
examples/julia/: dgemm_example.jl  zdotc_example.jl
examples/python/: dgemm_example.py  zdotc_example.py
include/: cblas_inject.h
src/: autoregister.rs  backend.rs  int_convert.rs  lib.rs  types.rs  xerbla.rs
src/blas1/: dot.rs  mod.rs  rot.rs  vector.rs
src/blas2/: gbmv.rs  gemv.rs  ger.rs  mod.rs  sbmv.rs  spmv.rs  spr.rs  symv.rs  syr.rs  tbmv.rs  tbsv.rs  tpmv.rs  trmv.rs  trsv.rs
src/blas3/: gemm.rs  hemm.rs  her2k.rs  herk.rs  mod.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs  trsm.rs
tests/: c_registration_api.rs  c_registration_non_divergence.rs  cblas_sys_compat.rs  common.rs  complex_dot_dual_width_dispatch.rs  dynamic_c_api.rs  gbmv.rs  gemm.rs  gemm_dual_width_dispatch.rs  gemv.rs  tbmv.rs  tbsv.rs  tpmv.rs  trmv.rs  trsv.rs
