[package]
name = "cblas-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CBLAS compatible interface backed by runtime-registered Fortran BLAS function pointers"
repository = "https://github.com/shinaoka/cblas-runtime"
keywords = ["blas", "cblas", "ffi", "linear-algebra", "runtime"]
categories = ["science", "mathematics", "external-ffi-bindings"]

[lib]
name = "cblas_runtime"
crate-type = ["rlib", "cdylib"]

[dependencies]
num-complex = "0.4"
ctor = { version = "0.2", optional = true }

[dev-dependencies]
cblas-sys = "0.1"
lapack-sys = "0.14"
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

[features]
default = []
ilp64 = []
openblas = ["ctor"]

[[bench]]
name = "blas1_overhead"
harness = false
